# buckets

./: PLAN.md  README.md  pyproject.toml
buckets/: __init__.py  cli.py  mount.py  platform.py  s3_bucket_mount.sh  s3_bucket_unmount.sh  s3_connect.sh  s3_connect_lightning.sh  s3_disconnect.sh  s3_mount_anywhere.sh  s3_zombie_sweep.sh
